<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Project</string>
    <string name="welcome_message">Welcome To P2Photo</string>
    <string name="logo_description">Logo of P2Photo</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="password_hint">Insert Password</string>
    <string name="my_albums">My Albums</string>
    <string name="placeholder_albumname">Album Name</string>
    <string name="create_new_album">Create New Album</string>
    <string name="new_album_placeholder_name">My Album</string>
    <string name="create_album_button">Create</string>
    <string name="add_album_text">+</string>
    <string name="album_thumb_descr">Album Thumbnail</string>
    <string name="photo_thumb_descr">Photo Thumbnail</string>
    <string name="album_options_text">...</string>
    <string name="title_activity_home_page">HomePage</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_add_album">Add Album</string>
    <string name="action_add_user">Add User</string>
    <string name="action_add_photo">Add Photo</string>
    <string name="title_activity_album_view">AlbumView</string>
    <string name="title_activity_log_view">LogView</string>
    <string name="title_activity_find_users">Find Users</string>
    <string name="app_directory_name" tools:ignore="ExtraTranslation">P2Photo</string>
    <string name="ppkiIP">http://192.168.42.51:9090</string>
    <string name="serverIP">http://192.168.42.51:8080</string>
    <string name="mode_choosing_title">Select an operation mode</string>
    <string name="wifi_direct_mode">WiFi Direct Mode</string>
    <string name="cloud_mode">Cloud Mode</string>
    <string name="logs_default_text">No logs to display</string>
    <string name="app_refresh">Refresh</string>
    <string name="port">10001</string>
</resources>
