<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ModeChoosing"
    android:noHistory="true">

    <TextView
        android:id="@+id/textViewModeChoosing"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:background="#4646FF"
        android:gravity="center"
        android:text="@string/mode_choosing_title"
        android:textColor="#FFFFFF"
        android:textSize="27sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/WiFiDirect_Mode"
        android:layout_width="168dp"
        android:layout_height="73dp"
        android:layout_marginStart="121dp"
        android:layout_marginLeft="121dp"
        android:layout_marginTop="382dp"
        android:layout_marginEnd="122dp"
        android:layout_marginRight="122dp"
        android:layout_marginBottom="276dp"
        android:text="@string/wifi_direct_mode"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/Cloud_Mode"
        android:layout_width="168dp"
        android:layout_height="73dp"
        android:layout_marginStart="121dp"
        android:layout_marginLeft="121dp"
        android:layout_marginTop="238dp"
        android:layout_marginEnd="122dp"
        android:layout_marginRight="122dp"
        android:layout_marginBottom="420dp"
        android:text="@string/cloud_mode"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>